Quick fix to error message spacing and some styling tweaks

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -58,11 +58,13 @@ button {
 
 #loading-error {
     text-align: center;
+    visibility: hidden;
+    color: red;
 }
 
 .main-content {
     text-align: center;
-    margin-top: 80px;
+    margin-top: 30px;
 }
 
 .temperatures {
@@ -101,8 +103,8 @@ button {
     padding-top: 20px;
     padding-bottom: 20px;
     border-radius: 5px;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 #fahrenheit_temp, #celsius_temp, #kelvin_temp {
